[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/stat_upgrade.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/gui_sector.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Resources/stat_drill_speed.tres" type="Resource" id=3]
[ext_resource path="res://Scenes/Resources/stat_max_ore.tres" type="Resource" id=4]
[ext_resource path="res://Scripts/home_menu_upgrades.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/button_arrow.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/button_arrow_down.png" type="Texture" id=7]

[node name="HM_Upgrades" type="NinePatchRect"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 2 )
script = ExtResource( 5 )
stats_available = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ) ]

[node name="Stat_Upgrade" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -33.0
margin_right = 40.0
margin_bottom = -12.0

[node name="Stat_Upgrade2" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -10.5
margin_right = 40.0
margin_bottom = 10.5

[node name="Stat_Upgrade3" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = 13.0
margin_right = 40.0
margin_bottom = 34.0

[node name="Button_Down" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -28.0
margin_right = 28.0
margin_bottom = -4.0
rect_min_size = Vector2( 16, 24 )
rect_rotation = 90.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="Button_Up" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = 29.0
margin_right = 4.0
margin_bottom = 53.0
rect_rotation = 270.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[connection signal="button_down" from="Button_Down" to="." method="_on_Button_Down_button_down"]
[connection signal="button_down" from="Button_Up" to="." method="_on_Button_Up_button_down"]
